styles.css
body {
    background-color: #1a1a1a;
    color: #ffffff;
    font-family: monospace;
}

#editor {
    display: flex;
    width: 950px;
    flex-direction: column;
    min-height: 100vh;
    background-color: #262626;
    box-shadow: 0 0 10px #000000;
}

.textarea {
    flex: 1;
}

.textarea pre {
    counter-reset: line;
}

pre span:before {
    counter-increment: line;
    content: counter(line);
    display: inline-block;
    padding: 0 .5em;
    margin-right: .5em;
    color: #888
}

.status.line {
    background-color: #303030;
    display: flex;
    justify-content: space-between;
}

.status.line >div {
    display: flex;
}

.status.line div >span{
    padding: 0 5px;
}

footer span {
    background-color: #585858;
}

footer .mode {
    font-weight: bold;
    background-color: #afd700;
    color: #016000;
}

footer .triangle {
    width: 0;
    height: 0;
    border-top: 10px solid transparent;
    border-bottom: 10px solid transparent;
}

footer .right .triangle {
    border-right: 10px solid #585858;
    background-color: #303030;
}

footer .mode.triangle {
    border-left: 10px solid #afd700;
    background-color: #585858;
}

footer .filename.triangle {
    border-left: 10px solid #585858;
    background-color: #303030;
}

